wip : fix scroll glitch
Improve scrollbar handling and refactor navigation
- Added `overflow-y: scroll` and `scrollbar-gutter: stable` to HTML for consistent scrollbar display.
- Introduced a custom hook, `useScrollAndResize`, to manage scroll state and screen width.
- Simplified event listeners setup with `useCallback`.
- Extracted common link styles into constants for reuse in navigation components.
- Refactored navigation links using a map function for cleaner code.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -549,6 +549,10 @@
 
   html {
     scroll-behavior: smooth;
+    /* Forcer l'affichage de la scrollbar pour éviter le décalage au chargement */
+    overflow-y: scroll;
+    /* Technique pour éviter le saut lors du chargement en réservant l'espace de la scrollbar */
+    scrollbar-gutter: stable;
   }
   
   /* Styles pour la barre de défilement */
